--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "csrf": "^3.1.0",
